# repoglyph-py

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  AGENTS_NOTES.md  CONTRIBUTING.md  NOTICE  README.md  pyproject.toml
.claude-plugin/: marketplace.json
.claude/commands/: codex-review.md
.github/workflows/: ci.yml  glyph.yml  release.yml
.glyph/okf/: hotspots.md  index.md  repository.md
.glyph/okf/districts/: assets.md  claude-plugin.md  github-workflows.md  index.md  plugin-.claude-plugin.md  plugin-skills-repoglyph.md  root.md  scripts.md  src-repoglyph-metrics.md  src-repoglyph-render-fonts.md  src-repoglyph-render.md  src-repoglyph.md  tests-goldens.md  tests-parity.md  tests.md
okf/: SKILL.md  hotspots.md  index.md  repository.md
okf/districts/: index.md
plugin/.claude-plugin/: plugin.json
plugin/skills/repoglyph/: SKILL.md
scripts/: update_badges.py  update_glyph.py
src/repoglyph/: __init__.py  __main__.py  cache.py  cli.py  geometry.py  gitsource.py  hashing.py  models.py  okf.py  palette.py  palettes.py
src/repoglyph/metrics/: __init__.py  base.py  core.py  coupling.py  oversized.py
src/repoglyph/render/: __init__.py  buildings.py  compose.py  districts.py  highrise.py  lighting.py  logo.py  oblique.py  overlay.py  scene.py  skyline.py  styles.py  svg.py  typeface.py
tests/: test_cache.py  test_cli.py  test_districts.py  test_geometry.py  test_gitsource.py  test_golden.py  test_metrics.py  test_models.py  test_okf.py  test_palette.py  test_palettes.py  test_parity.py  test_render.py  test_styles.py
tests/parity/: expected.json  fixture.json
