[project]
name = "repoglyph"
version = "0.2.0"
description = "Generate an isometric city-skyline fingerprint banner (SVG) from a local git repository."
readme = "README.md"
authors = [{ name = "remsky" }]
requires-python = ">=3.12"
license = "Apache-2.0"
license-files = ["LICENSE", "NOTICE", "src/repoglyph/render/fonts/OFL.txt"]
keywords = ["github", "svg", "banner", "visualization", "isometric", "git", "readme"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Software Development :: Version Control :: Git",
    "Topic :: Multimedia :: Graphics",
]
dependencies = []

[project.urls]
Homepage = "https://repoglyph.net"
Repository = "https://github.com/remsky/repoglyph-py"
Issues = "https://github.com/remsky/repoglyph-py/issues"

[project.optional-dependencies]
png = ["resvg-py>=0.3.3"]

[project.scripts]
repoglyph = "repoglyph.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/repoglyph"]

[tool.hatch.build.targets.sdist]
only-include = ["src/repoglyph"]

[dependency-groups]
dev = [
    "pytest>=8",
    "pytest-cov>=6",
    "resvg-py>=0.3.3",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
